# prompt-tuning

./: LICENSE  MANIFEST.in  README.md  implementation.md  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  close-pull-request.yml
prompt_tuning/: __init__.py  masks.py  masks_test.py  prompts.py  prompts_test.py  test_utils.py  test_utils_test.py
prompt_tuning/data/: __init__.py  c4.py  constants.py  features.py  glue.py  glue_transfer.py  metrics.py  metrics_test.py  multilingual.py  postprocessors.py  postprocessors_test.py  preprocessors.py  preprocessors_test.py  qa.py  show_tasks.py  summarization.py  super_glue.py  tasks.py  tasks_test.py  utils.py  utils_test.py
prompt_tuning/extended/: README.md  masks.py  masks_test.py  multitask_factorized_prompts.py  multitask_factorized_prompts_test.py  multitask_prompts.py  multitask_prompts_test.py
prompt_tuning/recycling/: README.md  collect_recycling_results.py  recycle.py  run_recycle.py  utils.py
prompt_tuning/scripts/: diff_checkpoints.py  extract_variable.py  find_module.py  mrqa_to_tsv.py  recreate_checkpoint.py  sst2-demo-eval.sh  sst2-demo-xxl.sh  sst2-demo.sh  subsample_vocab.py
prompt_tuning/spot/: README.md  __init__.py  gem.py  glue.py  mrqa.py  nli.py  preprocessors.py  preprocessors_test.py  summarization.py  tasks.py
prompt_tuning/test_data/: prompt_5x256.npy  tiny_embeddings_32128x4.npy
prompt_tuning/train/: layers.py  layers_fixtures.py  layers_test.py  models.py  models_test.py  optim.py  partitioning.py  prompts.py  prompts_test.py  train_test.py  (+2 more)
(+169 files in other folders)
